@@ -6,6 +6,7 @@
   <select name="sent_mail_folder" id="sent_mail_folder">
    <option value=""><gettext>None</gettext></option>
    <option value="<tag:default />" selected="selected"><gettext>Use Default Value</gettext></option>
+   <tag:special_use />
    <tag:flist />
   </select>
  </div>
