@@ -5,6 +5,7 @@
  <div>
   <select id="spam" name="spam">
    <option value="<tag:nofolder />"><gettext>None</gettext></option>
+   <tag:special_use />
    <tag:flist />
   </select>
  </div>
