@@ -1,0 +1,5 @@
+<loop:special_use>
+<option value="" disabled="disabled">- - - - - - - - - -</option>
+<option value="<tag:special_use.v />"><gettext>Server Suggestion:</gettext> <tag:special_use.l /></option>
+<option value="" disabled="disabled">- - - - - - - - - -</option>
+</loop:special_use>
