@@ -6,6 +6,7 @@
   <select id="trash" name="trash">
    <option value="<tag:nofolder />"><gettext>None</gettext></option>
    <option value="<tag:vtrash />"<if:vtrash_select> selected="selected"</if:vtrash_select>><gettext>Use Virtual Trash</gettext></option>
+   <tag:special_use />
    <tag:flist />
   </select>
  </div>
